WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119232
Page count can be incorrect if there is a pending style recalc
https://bugs.webkit.org/show_bug.cgi?id=119232
Summary
Page count can be incorrect if there is a pending style recalc
Simon Fraser (smfr)
Reported
2013-07-29 17:48:39 PDT
Page count can be incorrect if there is a pending style recalc
Attachments
Patch
(1.87 KB, patch)
2013-07-29 17:56 PDT
,
Simon Fraser (smfr)
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-07-29 17:56:27 PDT
Created
attachment 207682
[details]
Patch
Simon Fraser (smfr)
Comment 2
2013-07-29 18:05:30 PDT
https://trac.webkit.org/r153451
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug